# ex2_sdr

./: .gitignore  19200_baud_samples  4800_baud_samples  README.md  analyze_samples_different_baud_rates.m  meson.build  notes.txt
.circleci/: config.yml
doc/: Ex2_FEC_calcs.ods  Ex2_FEC_calcs.xlsx
gnuradio/: README.txt  endurosat_e2e.grc  endurosat_e2e.py  endurosat_test.grc  endurosat_test.py  loopback_with_framing.grc  output_listen_4532.sh  zmq_test.grc
gnuradio/Working on hardware/: endurosat_e2e.py  tx_only_default_uhf_mode.grc
gnuradio/dev/: endurosat_e2e.py  uhf_dir_cmds.grc
gnuradio/sband/: hstx_rx_custom_quarter_rate_scramble_doppler.grc  hstx_rx_custom_quarter_rate_scramble_nodoppler.grc  hstxc_rx_2mbps_noscramble.grc  usrp_rx_custom_2mbps_noscramble.grc
gnuradio/sband/Test_Dev/: destevez_k2sat_ex.grc  k2sat_image.py  k2sat_image_epy_block_0.py  qpsk_sim.grc  s-band-dummy.grc  s-band.grc  usrp_rx1.grc
gnuradio/test/: Dopplertest_loopback.grc  ES_test.sh  agctest_loopback.grc  endurosat_e2e.py
gnuradio/uhf/: UHF GNU Radio HOWTO.md  duplex_uhf_mode5.grc  duplex_uhf_mode5_csp_interface.grc  duplex_uhf_mode5_csp_interface_groundup.grc  endurosat_e2e.py  ns_UHF_groundstation.py  ns_uhf_gs.grc  rx_only_uhf_mode5.grc  uhf_byte_modulator.grc  uhf_loopback_nodoppler.grc  uhf_loopback_nodoppler.py  uhf_mode5_flatsat_nodoppler.grc  uhf_mode5_loopback_nodoppler.grc  uhf_mode5_pdu_modulator.grc  uhf_mode5_pfb_tuned_for_flatsat.grc  uhf_mode5_pfb_with_doppler.grc  uhf_mode5_withdoppler.grc  uhf_pdu_demodulator.grc  uhf_pdu_modulator.grc  uhf_test_pdu_loopback_nodoppler.grc  uhf_withdoppler.grc
gnuradio/uhf/ESTTC_Direct/: SendESCommandTimed.py  ns_esttc_loopback.grc  ns_esttc_receiver.grc  ns_esttc_transmitter.grc  ns_esttc_transmitter.py  uhf_pdu_demodulator.grc  uhf_pdu_modulator.grc
gnuradio/uhf/Obselete/: duplex_uhf_mode5_csp_interface.grc  rx_only_default.grc
gnuradio/uhf/RedTeam/: ABSat_GS_receive_only.grc  ABSat_GS_receive_only.py  GS_command_receiver.grc  Grant_F_sig_gen.grc  Grant_F_sig_gen.py  PowerAmp_sig_gen.grc  SendESCommand.py  SendESCommandTimed.py  audio_hp_test.grc  audio_hp_test.py  doppler_test.grc  doppler_test.py  doppler_test_epy_block_0.py  endurosat_e2e.py  endurosat_e2e_gpredict_doppler.py  ground_station_command_to_file.grc  ground_station_command_to_file_v2.grc  ground_station_receive_read_from_file.grc  ground_station_receive_read_from_file_three_pings.txt  gs_command_receiver.py  neudose_20230823_0700.txt  neudose_20230823_1008.txt  ns_esttc_loopback.grc  ns_esttc_loopback_temp.grc  ns_esttc_receiver.grc  ns_esttc_receiver.py  ns_esttc_receiver_ax25.grc  ns_esttc_receiver_ax25_file_read.grc  ns_esttc_receiver_ax25_file_save.grc  ns_esttc_receiver_file_save.py  ns_esttc_transmitter.grc  ns_esttc_transmitter.py  ns_esttc_transmitter_afsk.grc  ns_esttc_transmitter_cont.grc  ns_esttc_transmitter_epy_block_0.py  readGQRX.m  rx_only.grc
gnuradio/uhf/RedTeam/NS Satellites 202307/: Neudose_beacons_20230714_0323.txt
gnuradio/uhf/RedTeam/doc/: Beacon Receive Instructions.md
gnuradio/uhf/Test_Dev/: Basictxpipetestmode5.sh  Dopplertest_loopback.grc  ES_fdev_test.grc  FSK_example.grc  FSK_example.py  FSK_test.grc  FSK_test.py  GS_baseband_UDP_command_to_file.grc  GS_baseband_to_file.grc  GS_baseband_to_file.py  GS_baseband_to_file_epy_block_0.py  Grant_F_sig_gen.grc  Grant_F_sig_gen.py  RealValuedFSK.grc  SendESCommand.py  SendESCommandTimed.py  TestPycrc.py  agctest_loopback.grc  cspouttest.sh  endurosat_e2e.py  endurosat_e2e_epy_block_0.py  fdev_test.grc  fec_test_01.grc  pdu.grc  pdu.py  pdu_gen.grc  pdu_gen.py  pdu_gen_epy_block_0.py  pdu_lambda_chirp_demo.py  pdu_tools_demo.py  pduexample.py  repeated_pipe_cmds.sh  sdr_tx_infinite_WORKING.grc  software_loopback_infinite.grc  software_loopback_infinite_periodic.grc  software_loopback_tcp.grc  temp01.grc  tx_only_mode_test.grc  tx_only_uhf_mode5.grc  udp_test_del_me.grc  (+2 more)
gnuradio/uhf/Test_Dev/satnogs/: AURORASAT.yml  default.py  satyaml  (+11 more)
gnuradio/utils/: gpredict_doppler_doppler.block.yml  output_listen.sh
gnuradio/utils/Dev_Test/: mpdu_gen_01.py  ptt.py  sdr_ptt_program  sdr_ptt_program.cc  special_sync_block.py
gnuradio_sband/: k2sat_image.py  plotdata.m  recording_demod.grc  usrp_10mbps_scramble.grc  usrp_2mbps_noscramble.grc  usrp_rx_custom.grc  usrp_rx_custom_10mbps_scramble.grc
include/: FreeRTOSConfig.h
include/configuration/: radio.h
include/driver/: fec.h  mac_handler.h  osal.h  sdr_driver.h  sdr_driver.h~  sdr_rx_fwd.h  sdr_sband.h
include/error_control/: ConvolutionalCodecHD.hpp  FEC.hpp  NoFEC.hpp  QCLDPC.hpp  convCode27.hpp  convCodeR_1_2.hpp  crc.hpp  error_correction.hpp  golay.h  viterbi.h
include/error_control/qcldpc/: ldpc.h
include/mac_layer/: circular_buffer.h  mac.hpp
include/mac_layer/pdu/: mpdu.hpp  mpduHeader.hpp  mpduUtility.hpp
include/math/viterbi/: sim.c
include/phy_layer/: phy.hpp  rfMode.hpp
include/utilities/: DeadlineTimer.hpp  os_support.h  osal.h  pthread_queue.h  sdr_config.h  vectorTools.h
include/wrapper/: MACWrapper.h  error_correctionWrapper.h  rfModeWrapper.h
lib/driver/: fec.c  gnuradio.c  mac_handler.c  osal.c  sband_driver.c  sdr_driver.c  sdr_init.c  sdr_loopback.c  sdr_rx_fwd.c  sdr_uart.c
lib/error_control/: ConvolutionalCodecHD.cpp  FEC.cpp  NoFEC.cpp  QCLDPC.cpp  convCode27.cpp  convCodeR1_2.cpp  crc.cpp  error_correction.cpp  golay.cpp  sim.c  viterbi27_port.c
lib/mac_layer/: circular_buffer.c  mac.cpp
lib/mac_layer/pdu/: mpdu.cpp  mpduHeader.cpp  mpduUtility.cpp
lib/phy_layer/: rfMode.cpp
lib/phy_layer/pdu/: ppdu_u8.cpp
lib/utilities/: DeadlineTimer.cpp  osal.c  partab.c  pthread_queue.c  sband.c  vectorTools.cpp
lib/wrapper/: MACWrapper.cpp
src/: ex2_uhf_trx.cpp
unit_tests/: meson.build  qa_ConvolutionalCodecHD.cpp  qa_FEC.cpp  qa_NoFEC.cpp  qa_benchmark.cpp  qa_circular_buffer.cpp  qa_convCode27.cpp  qa_golay.cpp  qa_ldpc.cpp  qa_mac.cpp  qa_macWrapper.cpp  qa_matrix2d.cpp  qa_mpdu.cpp  qa_mpduHeader.cpp  qa_mpduUtility.cpp  qa_parity_check.cpp  qa_sdr_init.cpp  qa_viterbi.cpp  viterbi-utils.h
(+7 files in other folders)
